--- a/index.css
+++ b/index.css
@@ -263,8 +263,8 @@ main {
   background-color: rgba(255, 255, 255, 1);
   border: 3px solid #e5e5e5;
   height: 100%;
-  width: 370px;
-  margin-left: 20%;
+  width: 350px;
+  margin: auto;
   margin-top: 3%;
   border-radius: 10px;
   overflow: hidden;
@@ -311,7 +311,7 @@ main {
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  margin: 25px 25px;
+  margin: 0 25px;
 }
 
 ul {
@@ -322,7 +322,7 @@ ul {
 
 .content-tags {
   border-radius: 4px;
-  margin-top: 10px;
+  margin-top: 8px;
   margin-bottom: 5px;
   background: rgba(235, 240, 238, 1);
   padding: 2%;
@@ -349,7 +349,7 @@ ul {
 .content-btn {
   flex-direction: column;
   border-radius: 4px;
-  padding: 3%;
+  padding: 2%;
   margin: 5% 35% 5%;
   background: #36b37f;
   image-rendering: optimizeQuality;
@@ -637,16 +637,20 @@ a:hover {
 }
 
 .detail-container {
-  display: block;
   background-color: #fff;
-  width: auto;
-  height: auto;
-  margin: 10px;
+  margin: 5px;
   border-radius: 10px;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 7%;
+  z-index: 99;
+  overflow-y: scroll;
 }
 
 .box-container {
-  margin: 20px;
+  margin: 7px;
   border-radius: 10px;
 }
 
@@ -861,8 +865,10 @@ a:hover {
     background-color: rgba(255, 255, 255, 1);
     border: 3px solid #e5e5e5;
     height: 100%;
-    width: 400px;
+    width: 300px;
+    gap: 5%;
     margin: auto;
+    margin-top: 3%;
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
@@ -898,7 +904,7 @@ a:hover {
 
   .content-btn {
     border-radius: 4px;
-    padding: 3%;
+    padding: 2%;
     margin: 0% 35%;
     background: #36b37f;
     image-rendering: optimizeQuality;
@@ -1047,11 +1053,15 @@ a:hover {
 
   .detail-container {
     background-color: #fff;
-    width: auto;
-    height: auto;
     margin: 10px;
     border-radius: 10px;
     display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 99;
+    overflow-y: scroll;
   }
 
   .detail-mobile-image {
@@ -1081,12 +1091,12 @@ a:hover {
     font-size: 32px;
     margin-top: 5px;
     text-align: left;
-    width: 30%;
+    width: 50%;
   }
 
   .detail-content-btn {
     text-align: right;
-    margin-left: 45%;
+    margin-left: 20%;
     padding: 1%;
     border-radius: 3px;
     filter: contrast(150%);
