--- a/index.css
+++ b/index.css
@@ -637,29 +637,29 @@ a:hover {
 }
 
 .detail-container {
-  background-color: #fff;
-  margin: 5px;
+  background: #fff;
   border-radius: 10px;
   display: block;
-  position: fixed;
   top: 0;
+  width: 100%;
   left: 0;
-  bottom: 7%;
+  position: fixed;
+  bottom: -2%;
   z-index: 99;
-  overflow-y: scroll;
 }
 
 .box-container {
-  margin: 7px;
+  background: #fff;
+  margin: 2px;
   border-radius: 10px;
 }
 
 .detail-mobile-image {
   width: 90%;
-  height: 10%;
-  margin-top: 5%;
-  margin-left: 5%;
-  margin-right: 5%;
+  height: 80%;
+  margin-top: 2%;
+  margin-left: 2%;
+  margin-right: 2%;
   border-radius: 5%;
 }
 
@@ -687,6 +687,17 @@ a:hover {
   border-radius: 3px;
   filter: contrast(150%);
   display: none;
+}
+
+.detail-cancel-icon {
+  display: none;
+}
+
+.detail-cancel-mobile-icon {
+  display: block;
+  position: absolute;
+  top: 28px;
+  right: 46px;
 }
 
 .detail-content-btn-btm {
@@ -1053,15 +1064,33 @@ a:hover {
 
   .detail-container {
     background-color: #fff;
-    margin: 10px;
     border-radius: 10px;
     display: block;
-    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     z-index: 99;
-    overflow-y: scroll;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+  }
+
+  .detail-cancel-mobile-icon {
+    display: none;
+  }
+
+  .detail-cancel-icon {
+    display: block;
+    margin-left: 90%;
+    padding: 5px 5px;
+    margin-bottom: -3px;
+    width: 30px;
+  }
+
+  .box-container {
+    background-color: #fff;
+    margin: 2px;
+    border-radius: 10px;
   }
 
   .detail-mobile-image {
@@ -1070,9 +1099,9 @@ a:hover {
 
   .detail-desktop-image {
     display: block;
-    width: 90%;
-    height: 70%;
-    margin-top: 5%;
+    width: 91%;
+    height: 300px;
+    margin-top: 2%;
     margin-left: 5%;
     margin-right: 5%;
     border-radius: 5px;
@@ -1149,11 +1178,6 @@ a:hover {
     flex-direction: row;
     flex-wrap: wrap;
     list-style-type: none;
-  }
-
-  .box-container {
-    margin: 20px;
-    border-radius: 10px;
   }
 
   .detail-desktop-tags {
