--- a/index.css
+++ b/index.css
@@ -636,41 +636,40 @@ a:hover {
   margin-bottom: 2%;
 }
 
-.detail-container {
-  background: #fff;
+.modal-container {
   border-radius: 10px;
-  display: block;
   top: 0;
-  width: 100%;
+  bottom: 0;
   left: 0;
   position: fixed;
-  bottom: -2%;
   z-index: 99;
+  transition: all 0.1s ease;
 }
 
 .box-container {
-  background: #fff;
-  margin: 2px;
   border-radius: 10px;
+  background-color: #fff;
+  transition: all 0.1s ease;
 }
 
-.detail-mobile-image {
+.modal-mobile-image {
   width: 90%;
-  height: 80%;
-  margin-top: 2%;
-  margin-left: 2%;
-  margin-right: 2%;
+  height: 250px;
+  margin-top: 8%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 5%;
   border-radius: 5%;
 }
 
-.detail-desktop-image {
+.modal-desktop-image {
   display: none;
 }
 
-.detail-project-title {
+.modal-project-title {
   color: #172b4d;
   margin-left: 5%;
-  margin-top: -70px;
+  margin-top: -15px;
   line-height: 35px;
   height: 82px;
   font-weight: 700;
@@ -680,7 +679,7 @@ a:hover {
   margin-bottom: 20px;
 }
 
-.detail-content-btn {
+.modal-content-btn {
   text-align: right;
   margin-left: 45%;
   padding: 1%;
@@ -689,27 +688,32 @@ a:hover {
   display: none;
 }
 
-.detail-cancel-icon {
+.modal-cancel-icon {
   display: none;
 }
 
-.detail-cancel-mobile-icon {
-  display: block;
-  position: absolute;
-  top: 28px;
-  right: 46px;
+.modal-cancel-container.close {
+  display: none;
 }
 
-.detail-content-btn-btm {
+.modal-cancel-mobile-icon {
+  display: block;
+  position: absolute;
+  top: 9%;
+  right: 11%;
+  cursor: pointer;
+}
+
+.modal-content-btn-btm {
   text-align: center;
-  margin: 20px;
+  margin: 15px;
   padding: 1%;
   border-radius: 3px;
   filter: contrast(150%);
   display: block;
 }
 
-.detail-See-Live {
+.modal-See-Live {
   background: #36b37f;
   border-radius: 5px;
   color: white;
@@ -722,7 +726,7 @@ a:hover {
   cursor: pointer;
 }
 
-.detail-See-Source {
+.modal-See-Source {
   background: #36b37f;
   border-radius: 5px;
   color: white;
@@ -735,12 +739,12 @@ a:hover {
   cursor: pointer;
 }
 
-.detail-icon {
+.modal-icon {
   margin-bottom: -5px;
   width: 15px;
 }
 
-.detail-attri-mobile-content {
+.modal-attri-mobile-content {
   display: flex;
   justify-content: left;
   flex-direction: row;
@@ -748,11 +752,11 @@ a:hover {
   list-style-type: none;
 }
 
-.detail-attri-desktop-content {
+.modal-attri-desktop-content {
   display: none;
 }
 
-.detail-mobile-tags {
+.modal-mobile-tags {
   background-color: #ebecf0;
   border-radius: 7px;
   color: #344563;
@@ -766,15 +770,15 @@ a:hover {
   display: block;
 }
 
-.detail-desktop-tags {
+.modal-desktop-tags {
   display: none;
 }
 
-.detail-contrast {
+.modal-contrast {
   filter: contrast(100%);
 }
 
-.detail-summary {
+.modal-summary {
   margin: auto;
   width: 100%;
   line-height: 30px;
@@ -782,12 +786,12 @@ a:hover {
   color: #344563;
 }
 
-.detail-btn {
+.modal-btn {
   color: rgb(255, 255, 255);
   text-decoration: none;
 }
 
-.detail-mobile-content {
+.modal-mobile-content {
   background-color: #ebecf0;
   border-radius: 7px;
   color: #344563;
@@ -1062,24 +1066,22 @@ a:hover {
     display: none;
   }
 
-  .detail-container {
-    background-color: #fff;
+  .modal-container {
     border-radius: 10px;
-    display: block;
     top: 0;
     left: 0;
-    bottom: 0;
     z-index: 99;
     width: 100%;
-    height: 100%;
+    margin-bottom: -3%;
+    height: 10%;
     position: fixed;
   }
 
-  .detail-cancel-mobile-icon {
+  .modal-cancel-mobile-icon {
     display: none;
   }
 
-  .detail-cancel-icon {
+  .modal-cancel-icon {
     display: block;
     margin-left: 90%;
     padding: 5px 5px;
@@ -1089,29 +1091,28 @@ a:hover {
 
   .box-container {
     background-color: #fff;
-    margin: 2px;
     border-radius: 10px;
   }
 
-  .detail-mobile-image {
+  .modal-mobile-image {
     display: none;
   }
 
-  .detail-desktop-image {
+  .modal-desktop-image {
     display: block;
     width: 91%;
-    height: 300px;
-    margin-top: 2%;
+    height: 400px;
+    margin-top: 1%;
     margin-left: 5%;
     margin-right: 5%;
     border-radius: 5px;
   }
 
-  .detail-heading {
+  .modal-heading {
     display: flex;
   }
 
-  .detail-project-title {
+  .modal-project-title {
     color: #172b4d;
     margin-left: 5%;
     line-height: 40px;
@@ -1120,19 +1121,19 @@ a:hover {
     font-size: 32px;
     margin-top: 5px;
     text-align: left;
-    width: 50%;
+    width: 45%;
   }
 
-  .detail-content-btn {
+  .modal-content-btn {
     text-align: right;
-    margin-left: 20%;
+    margin-left: 25%;
     padding: 1%;
     border-radius: 3px;
     filter: contrast(150%);
     display: block;
   }
 
-  .detail-content-btn-btm {
+  .modal-content-btn-btm {
     text-align: right;
     margin-left: 45%;
     padding: 1%;
@@ -1141,7 +1142,7 @@ a:hover {
     display: none;
   }
 
-  .detail-See-Live {
+  .modal-See-Live {
     background: #36b37f;
     border-radius: 5px;
     color: white;
@@ -1154,7 +1155,7 @@ a:hover {
     cursor: pointer;
   }
 
-  .detail-See-Source {
+  .modal-See-Source {
     background: #36b37f;
     border-radius: 5px;
     color: white;
@@ -1167,12 +1168,12 @@ a:hover {
     cursor: pointer;
   }
 
-  .detail-icon {
+  .modal-icon {
     margin-bottom: -5px;
     width: 15px;
   }
 
-  .detail-attri-desktop-content {
+  .modal-attri-desktop-content {
     display: flex;
     justify-content: left;
     flex-direction: row;
@@ -1180,7 +1181,7 @@ a:hover {
     list-style-type: none;
   }
 
-  .detail-desktop-tags {
+  .modal-desktop-tags {
     background-color: #ebecf0;
     border-radius: 7px;
     color: #344563;
@@ -1194,15 +1195,15 @@ a:hover {
     display: block;
   }
 
-  .detail-mobile-tags {
+  .modal-mobile-tags {
     display: none;
   }
 
-  .detail-contrast {
+  .modal-contrast {
     filter: contrast(100%);
   }
 
-  .detail-summary {
+  .modal-summary {
     margin-left: 5%;
     width: 90%;
     line-height: 30px;
@@ -1210,12 +1211,12 @@ a:hover {
     color: #344563;
   }
 
-  .detail-btn {
+  .modal-btn {
     color: rgb(255, 255, 255);
     text-decoration: none;
   }
 
-  .detail-mobile-content {
+  .modal-mobile-content {
     display: none;
   }
 }
