--- a/index.css
+++ b/index.css
@@ -262,7 +262,7 @@ main {
   display: inline-block;
   background-color: rgba(255, 255, 255, 1);
   border: 3px solid #e5e5e5;
-  height: 100%;
+  height: 80%;
   width: 350px;
   margin: auto;
   margin-top: 3%;
@@ -287,7 +287,7 @@ main {
 .card-img {
   display: block;
   width: 500px;
-  height: 250px;
+  height: 200px;
 }
 
 .card-header {
@@ -434,7 +434,7 @@ ul {
 .flex-box {
   background-color: rgba(235, 240, 238, 1);
   border: 2px solid rgba(193, 199, 208, 1);
-  width: 370px;
+  width: 300px;
   height: 100%;
   border-radius: 10px;
   overflow: hidden;
@@ -637,6 +637,7 @@ a:hover {
 }
 
 .modal-container {
+  display: none;
   border-radius: 10px;
   top: 0;
   bottom: 0;
@@ -646,6 +647,14 @@ a:hover {
   transition: all 0.1s ease;
 }
 
+.modal-container.remove {
+  display: block;
+}
+
+.seeprojects.open {
+  display: block;
+}
+  
 .box-container {
   border-radius: 10px;
   background-color: #fff;
@@ -920,7 +929,7 @@ a:hover {
   .content-btn {
     border-radius: 4px;
     padding: 2%;
-    margin: 0% 35%;
+    margin: 0% 25%;
     background: #36b37f;
     image-rendering: optimizeQuality;
     align-items: center;
