--- a/index.css
+++ b/index.css
@@ -637,7 +637,6 @@ a:hover {
 }
 
 .modal-container {
-  display: none;
   border-radius: 10px;
   top: 0;
   bottom: 0;
@@ -647,7 +646,7 @@ a:hover {
   transition: all 0.1s ease;
 }
 
-.modal-container.hidden {
+.hidden {
   display: none;
 }
 
@@ -659,8 +658,8 @@ a:hover {
 
 .modal-mobile-image {
   width: 90%;
-  height: 250px;
-  margin-top: 8%;
+  height: 330px;
+  margin-top: 5%;
   margin-left: 1%;
   margin-right: 1%;
   margin-bottom: 5%;
@@ -1107,7 +1106,7 @@ a:hover {
     display: block;
     width: 91%;
     height: 400px;
-    margin-top: 1%;
+    margin-top: 6%;
     margin-left: 5%;
     margin-right: 5%;
     border-radius: 5px;
