--- a/index.css
+++ b/index.css
@@ -339,10 +339,15 @@ ul {
   cursor: pointer;
   text-decoration: none;
   text-align: center;
-  margin: auto;
   border: 0;
   color: rgb(255, 255, 255);
   background: #36b37f;
+  border-radius: 4px;
+  padding: 3%;
+  margin: 3% 35%;
+  margin-bottom: 2%;
+  align-items: center;
+  filter: contrast(150%);
   transition: all  0.5s ease;
 }
 
@@ -658,8 +663,8 @@ a:hover {
 
 .modal-mobile-image {
   width: 90%;
-  height: 330px;
-  margin-top: 5%;
+  height: 400px;
+  margin-top: 13%;
   margin-left: 1%;
   margin-right: 1%;
   margin-bottom: 5%;
@@ -703,7 +708,7 @@ a:hover {
 .modal-cancel-mobile-icon {
   display: block;
   position: absolute;
-  top: 9%;
+  top: 14%;
   right: 11%;
   cursor: pointer;
 }
@@ -921,12 +926,19 @@ a:hover {
     color: black;
   }
 
-  .content-btn {
-    border-radius: 4px;
-    padding: 2%;
-    margin: 0% 25%;
+  .seeprojects {
+    display: block;
+    position: relative;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    border: 0;
+    color: rgb(255, 255, 255);
     background: #36b37f;
-    image-rendering: optimizeQuality;
+    border-radius: 4px;
+    padding: 3%;
+    margin: 3% 35%;
+    margin-bottom: 1%;
     align-items: center;
     filter: contrast(150%);
     transition: all  0.5s ease;
@@ -1105,8 +1117,8 @@ a:hover {
   .modal-desktop-image {
     display: block;
     width: 91%;
-    height: 400px;
-    margin-top: 6%;
+    height: 450px;
+    margin-top: 7%;
     margin-left: 5%;
     margin-right: 5%;
     border-radius: 5px;
