--- a/index.css
+++ b/index.css
@@ -246,26 +246,27 @@ main {
 .works {
   background-color: rgba(255, 255, 255, 1);
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
   flex-wrap: wrap;
-  justify-content: space-around;
+  flex-direction: column;
+  margin: 95px 0;
 }
 
 .grid {
   width: auto;
   height: auto;
   align-items: start;
-  margin-top: 5%;
 }
 
 .grid-item {
   display: inline-block;
   background-color: rgba(255, 255, 255, 1);
-  border: 6px solid #e5e5e5;
-  width: 60%;
-  height: 100%;
+  border: 3px solid #e5e5e5;
+  height: 80%;
+  width: 350px;
   margin: auto;
-  border-radius: 25px;
+  margin-top: 3%;
+  border-radius: 10px;
   overflow: hidden;
   cursor: pointer;
   transition: 0.2s;
@@ -285,14 +286,14 @@ main {
 
 .card-img {
   display: block;
-  width: 100%;
-  height: 50%;
+  width: 500px;
+  height: 200px;
 }
 
 .card-header {
   display: block;
   font-size: 140%;
-  width: 100%;
+  width: 70%;
   height: 8%;
   font-weight: 600;
   color: rgb(58, 74, 66);
@@ -305,13 +306,12 @@ main {
 
 .card-content {
   display: flex;
-  width: 96%;
   flex-wrap: wrap;
   align-content: center;
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  margin-top: 10%;
+  margin: 0 25px;
 }
 
 ul {
@@ -322,8 +322,8 @@ ul {
 
 .content-tags {
   border-radius: 4px;
-  margin-top: 12px;
-  margin-bottom: 10px;
+  margin-top: 8px;
+  margin-bottom: 5px;
   background: rgba(235, 240, 238, 1);
   padding: 2%;
   font-size: 12px;
@@ -333,23 +333,34 @@ ul {
   color: black;
 }
 
-.see-projects {
+.seeprojects {
+  display: block;
+  position: relative;
+  cursor: pointer;
   text-decoration: none;
   text-align: center;
-  margin-top: 8px;
   border: 0;
   color: rgb(255, 255, 255);
   background: #36b37f;
+  border-radius: 4px;
+  padding: 3%;
+  margin: 3% 35%;
+  margin-bottom: 2%;
+  align-items: center;
+  filter: contrast(150%);
+  transition: all  0.5s ease;
 }
 
 .content-btn {
+  flex-direction: column;
   border-radius: 4px;
   padding: 2%;
-  margin: 10% 30% 5%;
+  margin: 5% 35% 5%;
   background: #36b37f;
   image-rendering: optimizeQuality;
   align-items: center;
   filter: contrast(150%);
+  transition: all  0.5s ease;
 }
 
 .btn {
@@ -428,15 +439,16 @@ ul {
 .flex-box {
   background-color: rgba(235, 240, 238, 1);
   border: 2px solid rgba(193, 199, 208, 1);
-  width: 62%;
-  height: 90%;
+  width: 300px;
+  height: 100%;
   border-radius: 10px;
   overflow: hidden;
   cursor: pointer;
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin: auto auto 5%;
+  margin-left: 4%;
+  margin-top: 3%;
 }
 
 .attribute-ellip {
@@ -457,7 +469,8 @@ ul {
 
 .attri-content {
   padding: 0;
-  margin: 0;
+  margin: 40px;
+  width: 70%;
   list-style-type: none;
 }
 
@@ -477,7 +490,7 @@ ul {
   flex-direction: row;
   font-size: 12px;
   flex-wrap: wrap;
-  text-align: center;
+  position: relative;
   color: #60c095;
   background-color: rgb(255, 255, 255);
   border-radius: 0.3rem;
@@ -489,8 +502,8 @@ ul {
   padding-left: 5%;
   float: left;
   letter-spacing: 0.01em;
-  justify-content: space-between;
-  margin-left: 3%;
+  justify-content: space-around;
+  margin-left: 1%;
   margin-bottom: 7%;
 }
 
@@ -628,6 +641,198 @@ a:hover {
   margin-bottom: 2%;
 }
 
+.modal-container {
+  border-radius: 10px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  z-index: 99;
+  transition: all 0.1s ease;
+}
+
+.hidden {
+  display: none;
+}
+
+.box-container {
+  border-radius: 10px;
+  height: 1000px;
+  background-color: #fff;
+  transition: all 0.1s ease;
+}
+
+.modal-desktop-image {
+  width: 90%;
+  height: 260px;
+  margin-top: 5%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 5%;
+  border-radius: 5%;
+}
+
+.modal-project-title {
+  color: #172b4d;
+  margin-left: 5%;
+  margin-top: -15px;
+  line-height: 35px;
+  height: 82px;
+  font-weight: 700;
+  font-size: 30px;
+  width: 100%;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.modal-content-btn {
+  text-align: right;
+  margin-left: 45%;
+  padding: 1%;
+  border-radius: 3px;
+  filter: contrast(150%);
+  display: none;
+}
+
+.modal-cancel-icon {
+  display: none;
+}
+
+.modal-cancel-container.hidden {
+  display: none;
+}
+
+.modal-cancel-mobile-icon {
+  display: block;
+  position: absolute;
+  top: 10%;
+  right: 11%;
+  cursor: pointer;
+}
+
+.modal-content-btn-btm {
+  text-align: center;
+  margin: 15px;
+  padding: 1%;
+  border-radius: 3px;
+  filter: contrast(150%);
+  display: block;
+}
+
+.modal-See-Source-btm {
+  background: #36b37f;
+  border-radius: 5px;
+  color: white;
+  padding: 12px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 10px 10px;
+  cursor: pointer;
+}
+
+.modal-See-Live-btm {
+  background: #36b37f;
+  border-radius: 5px;
+  color: white;
+  padding: 12px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 10px 10px;
+  cursor: pointer;
+}
+
+.modal-icon-liveDemo {
+  margin-bottom: -5px;
+  width: 15px;
+}
+
+.modal-icon-github {
+  margin-bottom: -5px;
+  width: 15px;
+}
+
+.modal-attri-desktop-content {
+  display: flex;
+  justify-content: left;
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style-type: none;
+}
+
+.modal-attri-mobile-content {
+  display: none;
+}
+
+.modal-desktop-tags {
+  background-color: #ebecf0;
+  border-radius: 7px;
+  color: #344563;
+  text-align: center;
+  text-decoration: none;
+  font-size: 12px;
+  margin-bottom: 10px;
+  margin-top: -35px;
+  cursor: pointer;
+  margin-left: 5%;
+  padding: 8px 12px;
+  display: block;
+}
+
+.modal-contrast {
+  filter: contrast(100%);
+}
+
+.modal-summary {
+  margin: auto;
+  width: 90%;
+  line-height: 30px;
+  font-size: 20px;
+  color: #344563;
+}
+
+.modal-btn {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+
+.modal-mobile-content {
+  background-color: #ebecf0;
+  border-radius: 7px;
+  color: #344563;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 10px 12px;
+  cursor: pointer;
+  margin-left: 5%;
+  padding: 8px 12px;
+}
+
+.modal-content-nav-btn {
+  display: flex;
+  flex-direction: row;
+  margin-left: 30px;
+}
+
+.modal-next {
+  
+  margin-left: 100px;
+}
+
+.fa-chevron-left,
+.fa-chevron-right {
+  font-size: 24px;
+}
+
+.modal-previous {
+  margin-left: 700px;
+}
+
 @media only screen and (min-width: 1100px) {
   .navbar.container {
     position: fixed;
@@ -652,6 +857,15 @@ a:hover {
     margin: 3% 5%;
     font-size: 15px;
     display: none;
+  }
+
+  .works {
+    background-color: rgba(255, 255, 255, 1);
+    display: grid;
+    row-gap: 50px;
+    grid-template-columns: auto auto auto;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   .nav-menu {
@@ -689,15 +903,63 @@ a:hover {
     transition: all 0.3s ease;
   }
 
-  .works {
-    height: auto;
-    width: 100%;
-    flex-wrap: nowrap;
+  .grid-item {
+    display: inline-block;
+    background-color: rgba(255, 255, 255, 1);
+    border: 3px solid #e5e5e5;
+    height: 95%;
+    width: 300px;
+    gap: 5%;
+    margin: auto;
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    transition: 0.2s;
   }
 
-  .grid-item {
-    margin-left: 6%;
+  .card-header {
     width: 70%;
+  }
+
+  .card-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    margin: 25px 25px;
+  }
+
+  .content-tags {
+    border-radius: 4px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    background: rgba(235, 240, 238, 1);
+    padding: 2%;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    letter-spacing: 0.03em;
+    color: black;
+  }
+
+  .seeprojects {
+    display: block;
+    position: relative;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    border: 0;
+    color: rgb(255, 255, 255);
+    background: #36b37f;
+    border-radius: 4px;
+    padding: 3%;
+    margin: -20px 35%;
+    margin-bottom: 1%;
+    align-items: center;
+    filter: contrast(150%);
+    transition: all  0.5s ease;
   }
 
   .flex-container {
@@ -705,9 +967,8 @@ a:hover {
   }
 
   .flex-box {
-    margin: -20% 3% 5%;
-    width: 23%;
-    margin-right: 0.4%;
+    margin: -20% 7% 5%;
+    width: 400px;
   }
 
   .contact {
@@ -809,11 +1070,6 @@ a:hover {
     padding-top: 10%;
   }
 
-  .content-tags {
-    text-align: left;
-    height: 1.5rem;
-  }
-
   .about2 {
     background-size: 6%;
   }
@@ -843,4 +1099,167 @@ a:hover {
   .line2 {
     display: none;
   }
+
+  .modal-container {
+    border-radius: 10px;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    width: 100%;
+    margin-bottom: -3%;
+    height: 10%;
+    position: fixed;
+  }
+
+  .modal-cancel-mobile-icon {
+    display: none;
+  }
+
+  .modal-cancel-icon {
+    display: block;
+    margin-left: 90%;
+    padding: 5px 5px;
+    margin-bottom: -3px;
+    width: 30px;
+  }
+
+  .box-container {
+    background-color: #fff;
+    border-radius: 10px;
+    height: 1000%;
+  }
+
+  .modal-mobile-image {
+    display: none;
+  }
+
+  .modal-desktop-image {
+    display: block;
+    width: 91%;
+    height: 310px;
+    margin-top: 2%;
+    margin-left: 5%;
+    margin-right: 8%;
+    border-radius: 5px;
+  }
+
+  .modal-heading {
+    display: flex;
+    margin-top: -20px;
+  }
+
+  .modal-project-title {
+    color: #172b4d;
+    margin-left: 5%;
+    line-height: 40px;
+    height: 82px;
+    font-weight: 700;
+    font-size: 32px;
+    margin-top: 1px;
+    text-align: left;
+    width: 45%;
+  }
+
+  .modal-content-btn {
+    text-align: right;
+    margin-left: 25%;
+    padding: 1%;
+    border-radius: 3px;
+    filter: contrast(150%);
+    display: block;
+  }
+
+  .modal-content-btn-btm {
+    text-align: right;
+    margin-left: 45%;
+    padding: 1%;
+    border-radius: 3px;
+    filter: contrast(150%);
+    display: none;
+  }
+
+  .modal-See-Live-Top {
+    background: #36b37f;
+    border-radius: 5px;
+    color: white;
+    padding: 12px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 10px 10px;
+    cursor: pointer;
+  }
+
+  .modal-See-Source-Top {
+    background: #36b37f;
+    border-radius: 5px;
+    color: white;
+    padding: 12px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 11px 11px;
+    cursor: pointer;
+  }
+
+  .modal-icon-liveDemo {
+    margin-bottom: -5px;
+    width: 15px;
+  }
+
+  .modal-icon-github {
+    margin-bottom: -5px;
+    width: 15px;
+  }
+
+  .modal-attri-desktop-content {
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style-type: none;
+  }
+
+  .modal-desktop-tags {
+    background-color: #ebecf0;
+    border-radius: 7px;
+    color: #344563;
+    text-align: center;
+    text-decoration: none;
+    font-size: 12px;
+    margin-bottom: 10px;
+    margin-top: -15px;
+    cursor: pointer;
+    margin-left: 5%;
+    padding: 8px 12px;
+    display: block;
+  }
+
+  .modal-mobile-tags {
+    display: none;
+  }
+
+  .modal-contrast {
+    filter: contrast(100%);
+  }
+
+  .modal-summary {
+    margin-left: 5%;
+    width: 90%;
+    line-height: 30px;
+    font-size: 20px;
+    color: #344563;
+  }
+
+  .modal-btn {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+  }
+
+  .modal-mobile-content {
+    display: none;
+  }
+
 }
