--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
 }
 
 .nav-menu-wrapper {
-  height: 100%;
+  height: 110%;
   position: fixed;
   bottom: 0;
   top: 50px;
@@ -56,6 +56,7 @@
   text-align: left;
   padding: 15px;
   width: 80%;
+  text-decoration: none;
   right: 0%;
   font-size: 20px;
   display: table;
@@ -146,6 +147,10 @@ main {
 .margin-left-right-auto {
   margin-right: auto;
   margin-left: auto;
+}
+
+.section{
+  overflow-y: scroll;
 }
 
 .socials-list {
@@ -322,8 +327,7 @@ ul {
 
 .content-tags {
   border-radius: 4px;
-  margin-top: 8px;
-  margin-bottom: 5px;
+  margin: 8px 0 0 5px;
   background: rgba(235, 240, 238, 1);
   padding: 2%;
   font-size: 12px;
@@ -344,8 +348,7 @@ ul {
   background: #36b37f;
   border-radius: 4px;
   padding: 3%;
-  margin: 3% 35%;
-  margin-bottom: 2%;
+  margin: 3% 35% 2%;
   align-items: center;
   filter: contrast(150%);
   transition: all  0.5s ease;
@@ -428,7 +431,7 @@ ul {
   text-align: center;
 }
 
-.flex-container {
+.about-container  {
   background-color: rgba(255, 255, 255, 1);
   display: flex;
   flex-direction: row;
@@ -436,7 +439,7 @@ ul {
   justify-content: space-around;
 }
 
-.flex-box {
+.about-box {
   background-color: rgba(235, 240, 238, 1);
   border: 2px solid rgba(193, 199, 208, 1);
   width: 300px;
@@ -584,6 +587,12 @@ input[type='submit'] {
   width: 129px;
   height: 48px;
   margin: auto;
+}
+
+input[type='email'],
+input[type='text'],
+textarea:hover {
+  border: 1px solid #60c095;
 }
 
 input[type='submit']:hover {
@@ -788,8 +797,7 @@ a:hover {
   text-align: center;
   text-decoration: none;
   font-size: 12px;
-  margin-bottom: 10px;
-  margin-top: -35px;
+  margin: -35px 0 0 10px;
   cursor: pointer;
   margin-left: 5%;
   padding: 8px 12px;
