--- a/index.css
+++ b/index.css
@@ -4,11 +4,35 @@
   font-family: ubuntu, sans-serif;
 }
 
+:root {
+ --neutral-nav-bg: rgb(255, 254, 254);
+ --neutral-menu-color: rgb(219, 219, 217);
+ --neutral-toggle: #000;
+ --neutral-text: #fff;
+ --navlink-toggle-c0lor: #3b6645;
+ --work-title-text-color: #172b4d;
+ --work-subheading-text-color: #36b37e;
+ --icon-color: #505f79;
+ --vector-toggle-color: #45a049;
+ --summary-text-color:#172b4d;
+ --secondary-work-bg: rgba(23, 43, 77, 1);
+ --secondary-bg-color: rgba(54, 179, 127, 1);
+ --secondary-about-bg: rgba(255, 255, 255, 1);
+ --secondary-card-color: rgb(58, 74, 66);
+ --secondary-tags-bg: rgba(235, 240, 238, 1);
+ --neutral-btn-text: rgb(255, 255, 255);
+ --secondary-btn-bg: #36b37f;
+ --work-btn-text: #dbdbdb;
+ --secondary-tags-toggle: rgba(193, 199, 208, 1);
+ --attri-title-color: rgba(52, 69, 99, 1);
+ --attri-btn-text: #60c095;
+}
+
 .navbar-container {
   height: 50px;
   display: block;
   font-size: 1.2rem;
-  background-color: rgb(255, 254, 254);
+  background-color: var(--neutral-nav-bg);
 }
 
 .nav-menu-wrapper {
@@ -16,7 +40,7 @@
   position: fixed;
   bottom: 0;
   top: 50px;
-  background-color: rgb(219, 219, 217);
+  background-color: var(--neutral-menu-color);
   width: 100%;
   display: none;
 }
@@ -32,7 +56,7 @@
   position: absolute;
   height: 80%;
   width: 100%;
-  background-color: rgb(255, 254, 254);
+  background-color: var(--neutral-nav-bg);
   border-bottom-right-radius: 25px;
   border-bottom-left-radius: 25px;
 }
@@ -42,7 +66,7 @@
   height: 3px;
   margin: 5px auto;
   transition: all 0.3s ease;
-  background: #000;
+  background: var(--neutral-toggle);
   cursor: pointer;
   display: block;
 }
@@ -60,11 +84,11 @@
   right: 0%;
   font-size: 20px;
   display: table;
-  color: #fff;
+  color: var(--neutral-text);
 }
 
 .nav-links:hover {
-  color: #3b6645;
+  color: var(--navlink-toggle-c0lor);
   transition: all 0.3s ease;
 }
 
@@ -115,7 +139,7 @@ main {
 }
 
 .heading {
-  color: #172b4d;
+  color: var(--work-title-text-color);
   font-size: 40px;
   margin-top: 12%;
   margin-bottom: 3%;
@@ -123,7 +147,7 @@ main {
 }
 
 .subheading {
-  color: #36b37e;
+  color: var(--work-subheading-text-color);
   font-size: 40px;
   width: 70%;
   margin-top: 2%;
@@ -136,7 +160,7 @@ main {
   line-height: 28px;
   margin-top: 5%;
   width: 90%;
-  color: #172b4d;
+  color: var(--summary-text-color);
 }
 
 .intro-section {
@@ -171,7 +195,7 @@ main {
   width: 90px;
   padding: 0;
   margin: 0;
-  color: #505f79;
+  color: var(--icon-color);
 }
 
 .icon:hover {
@@ -222,12 +246,12 @@ main {
 }
 
 .vector-img:hover {
-  color: #45a049;
+  color: var(--vector-toggle-color);
 }
 
 .works-header {
   position: static;
-  color: rgba(23, 43, 77, 1);
+  color: var(--secondary-work-bg);
   font-size: 40px;
   font-style: normal;
   font-weight: bold;
@@ -240,7 +264,7 @@ main {
 .line {
   width: 10%;
   height: 9px;
-  background-color: rgba(54, 179, 127, 1);
+  background-color: var(--secondary-bg-color);
   display: inline-block;
   position: relative;
   margin: 3% 45%;
@@ -249,7 +273,7 @@ main {
 }
 
 .works {
-  background-color: rgba(255, 255, 255, 1);
+  background-color: var(--secondary-about-bg);
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -265,7 +289,7 @@ main {
 
 .grid-item {
   display: inline-block;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: var(--secondary-about-bg);
   border: 3px solid #e5e5e5;
   height: 80%;
   width: 350px;
@@ -301,7 +325,7 @@ main {
   width: 70%;
   height: 8%;
   font-weight: 600;
-  color: rgb(58, 74, 66);
+  color: var(--secondary-card-color);
   margin: auto;
   text-align: center;
   justify-content: center;
@@ -328,7 +352,7 @@ ul {
 .content-tags {
   border-radius: 4px;
   margin: 8px 0 0 5px;
-  background: rgba(235, 240, 238, 1);
+  background: var(--secondary-tags-bg);
   padding: 2%;
   font-size: 12px;
   font-style: normal;
@@ -344,8 +368,8 @@ ul {
   text-decoration: none;
   text-align: center;
   border: 0;
-  color: rgb(255, 255, 255);
-  background: #36b37f;
+  color: var(--neutral-tags-text);
+  background: var(--secondary-btn-bg);
   border-radius: 4px;
   padding: 3%;
   margin: 3% 35% 2%;
@@ -359,7 +383,8 @@ ul {
   border-radius: 4px;
   padding: 2%;
   margin: 5% 35% 5%;
-  background: #36b37f;
+  color: var(--attri-btn-text);
+  background: var(--secondary-btn-bg);
   image-rendering: optimizeQuality;
   align-items: center;
   filter: contrast(150%);
@@ -367,7 +392,7 @@ ul {
 }
 
 .btn {
-  color: rgb(255, 255, 255);
+  color: var(--neutral-btn-text);
 }
 
 .about {
@@ -379,7 +404,7 @@ ul {
 }
 
 .about-header {
-  color: #172b4d;
+  color: var(--work-title-text-color);
   font-size: 40px;
   margin-top: 120px;
   margin-bottom: 20px;
@@ -398,7 +423,7 @@ ul {
   line-height: 32px;
   text-align: center;
   justify-content: center;
-  color: #172b4d;
+  color: var(--summary-text-color);
   padding: 20px;
   margin: auto;
   width: 90%;
@@ -419,8 +444,8 @@ ul {
   height: 2rem;
   padding: 1rem 1rem;
   font-size: 1.3rem;
-  color: #dbdbdb;
-  background-color: #36b37f;
+  color: var(--work-btn-text);
+  background-color: var(--secondary-btn-bg);
   filter: contrast(180%);
   border: none;
   border-radius: 0.4rem;
@@ -432,7 +457,7 @@ ul {
 }
 
 .about-container  {
-  background-color: rgba(255, 255, 255, 1);
+  background-color: var(--secondary-about-bg);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -440,8 +465,8 @@ ul {
 }
 
 .about-box {
-  background-color: rgba(235, 240, 238, 1);
-  border: 2px solid rgba(193, 199, 208, 1);
+  background-color: var(--secondary-tags-bg);
+  border: 2px solid var(--secondary-tags-toggle);
   width: 300px;
   height: 100%;
   border-radius: 10px;
@@ -460,7 +485,7 @@ ul {
   width: 5rem;
   height: 5rem;
   border-radius: 20rem;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--neutral-btn-text);
   align-items: center;
 }
 
@@ -483,7 +508,7 @@ ul {
   font-size: 30px;
   line-height: 32px;
   text-align: center;
-  color: rgba(52, 69, 99, 1);
+  color: var(--attri-title-color);
   margin-bottom: 1rem;
 }
 
@@ -495,7 +520,7 @@ ul {
   flex-wrap: wrap;
   position: relative;
   color: #60c095;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--neutral-btn-text);
   border-radius: 0.3rem;
   height: 1.5rem;
   width: 20%;
@@ -515,7 +540,7 @@ ul {
 }
 
 .contact {
-  background-color: rgb(255, 255, 255);
+  background-color: var(--neutral-btn-text);
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -682,7 +707,7 @@ a:hover {
 }
 
 .modal-project-title {
-  color: #172b4d;
+  color: var(--summary-text-color);
   margin-left: 5%;
   margin-top: -15px;
   line-height: 35px;
