--- a/index.css
+++ b/index.css
@@ -33,6 +33,8 @@
  --modal-tag-bg: #ebecf0;
  --item-border-color: #e5e5e5;
  --line-toggle: rgb(18, 99, 238);
+ --modal-bg-color: rgba(193, 199, 208, 1);
+
 }
 
 .navbar-container {
@@ -644,7 +646,9 @@ a:hover {
 }
 
 .modal-container {
-  border-radius: 10px;
+  width: 100%;
+  opacity:0.9;
+  background-color: var(--modal-bg-color);
   top: 0;
   bottom: 0;
   left: 0;
@@ -654,24 +658,22 @@ a:hover {
 
 .box-container {
   border-radius: 10px;
-  height: 1000px;
-  background-color: #fff;
+  height: 600px;
+  background-color: var(--neutral-text);
   transition: all 0.1s ease;
+  margin: 20px 30px 20px 30px;
 }
 
 .modal-desktop-image {
   width: 90%;
-  height: 260px;
-  margin-top: 5%;
-  margin-left: 1%;
-  margin-right: 1%;
-  margin-bottom: 5%;
+  height: 240px;
+  margin: 5% 1% 1% 1%;
   border-radius: 5%;
 }
 
 .modal-project-title {
   color: var(--summary-text-color);
-  margin-top: -15px 5% 0 0;
+  margin: 6px 20px;
   line-height: 35px;
   height: 82px;
   font-weight: 700;
@@ -690,14 +692,14 @@ a:hover {
 }
 
 .modal-cancel-mobile-icon {
-  top: 10%;
-  right: 11%;
+  top: 9%;
+  right: 15%;
   cursor: pointer;
 }
 
 .modal-content-btn-btm {
   text-align: center;
-  margin: 2px;
+  margin: -1px;
   padding: 1%;
   border-radius: 3px;
   filter: contrast(150%);
@@ -739,8 +741,8 @@ a:hover {
   width: 15px;
 }
 
-.modal-content-next-button {
-  margin-left: 20%;
+.modal-content-next-button { 
+  margin-left: 15%;
   cursor: pointer;
 }
 
@@ -748,6 +750,7 @@ a:hover {
   margin-left: 50%;
   cursor: pointer;
 }
+
 .modal-attri-desktop-content {
   justify-content: left;
   list-style-type: none;
@@ -1032,15 +1035,12 @@ a:hover {
   }
 
   .modal-container {
-    border-radius: 10px;
-    top: 0;
-    left: 0;
     z-index: 99;
     width: 100%;
-    margin-bottom: -3%;
-    height: 10%;
+    opacity:0.9;
+    background-color: var(--modal-bg-color);
   }
-
+ 
   .modal-cancel-icon {
     margin-left: 90%;
     padding: 5px 5px;
@@ -1050,13 +1050,15 @@ a:hover {
 
   .box-container {
     border-radius: 10px;
-    height: 1000%;
-  }
+    height: 550px;
+    margin: 15%;
+    margin-top: 20px;
+}
 
   .modal-desktop-image {
-    width: 91%;
-    height: 310px;
-    margin-top: 2%;
+    width: 90%;
+    height: 200px;
+    margin-top: 1%;
     margin-left: 5%;
     margin-right: 8%;
     border-radius: 5px;
@@ -1079,6 +1081,7 @@ a:hover {
   }
 
   .modal-content-btn {
+    display: flex;
     text-align: right;
     margin-left: 25%;
     padding: 1%;
